checking commit  index.html

--- a/pep/index.html
+++ b/pep/index.html
@@ -12,6 +12,7 @@
     <span>hello</span>
     <p>CO<sub>2</sub></p>
     <p>10<sup>2</sup>=100</p>
+    <h6>hello this is the changes i am doing to check git commit</h6>
 </body>
 </html>
 
