CSS and specificity

--- a/pep/17Jan.html
+++ b/pep/17Jan.html
@@ -8,9 +8,19 @@
 
 </head>
 <body>
-    <p class="text-type-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, distinctio!</p>
+    <p class="text-type-1">Lorem ipsum</p>
     <br>
-    <p class="text-type-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam pariatur molestias ipsum?</p>
-    
+    <p class="text-type-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam pariatur molestias ipsum?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illum.
+    </p>
+
+
+    <br><hr>
+    <h1>Specificity</h1> <br>
+    <h2>/* Browser's default CSS < * < tag < . < # < inline < !important */</h2><br>
+    <h4>Lorem ipsum dolor sit amet.</h4><br>
+    <p class="text">Lorem ipsum dolor sit amet.</p><br>
+    <p class="text" id="text1">Lorem ipsum dolor sit amet.</p><br>
+    <p class="text" id="text1" style="color:blue">Lorem ipsum dolor sit amet.</p><br>
 </body>
 </html>
