--- a/pep/index.html
+++ b/pep/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>First</title>
-    <link rel="icon" href="https://e7.pngegg.com/pngimages/487/562/png-clipart-sun-logo-sunlight-thumbnail.png" type="image/png">
+    <link rel="icon" href="https://e7.pngegg.com/pngimages/487/562/png-clipart-sun-logo-sunlight-thumbnail.png"
+        type="image/png">
 </head>
+
 <body>
     <h1>hello</h1>
     <a href="https://www.flipkart.com">flipkart (absolute link)</a> <br>
@@ -17,9 +20,13 @@
     <iframe src="https://www.flipkart.com" title="Flipkart" height="400" width="30%" style="border:none;"></iframe>
     <br>
     <p>
-        Lorem <strong><em>em tag</em></strong> dolor sit, amet consectetur adipisicing elit. Eaque cupiditate dolore <strong><i>i tag</i></strong>. Sed sapiente quod praesentium, ducimus temporibus mollitia natus deleniti maiores qui veritatis aliquid perferendis <b>bold tag</b> doloremque <strong>strong tag</strong>aspernatur officia delectus ratione? Velit porro nihil odit deleniti explicabo rem distinctio inventore unde tempora assumenda, consequatur <strong><abbr  title="EVS">Abbr tag</abbr></strong> necessitatibus obcaecati temporibus aspernatur.
+        Lorem <strong><em>em tag</em></strong> dolor sit, amet consectetur adipisicing elit. Eaque cupiditate dolore
+        <strong><i>i tag</i></strong>. Sed sapiente quod praesentium, ducimus temporibus mollitia natus deleniti maiores
+        qui veritatis aliquid perferendis <b>bold tag</b> doloremque <strong>strong tag</strong>aspernatur officia
+        delectus ratione? Velit porro nihil odit deleniti explicabo rem distinctio inventore unde tempora assumenda,
+        consequatur <strong><abbr title="EVS">Abbr tag</abbr></strong> necessitatibus obcaecati temporibus aspernatur.
     </p>
-<center>
+    <center>
         <table border="1">
             <caption>Student Data</caption>
             <thead>
@@ -42,11 +49,11 @@
                 </tr>
             </tbody>
         </table>
-</center>
-<br>
-<br>
-<form>
-    <label>First Name / Preferred Name:</label>
+    </center>
+    <br>
+    <br>
+    <form>
+        <label>First Name / Preferred Name:</label>
         <input placeholder="Please type here..." type="text" name="userFirstName" maxlength="4" required
             autocapitalize="characters">
         <br><br>
@@ -64,46 +71,46 @@
         <br><br>
         <input type="submit">
         <input type="reset">
-    <div>
-        <label>Gender:</label><br>
-        <input type="radio" name="gender" value="male" id="i-g-m"><label for="i-g-m">Male</label><br>
-        <input type="radio" name="gender" value="female" id="i-g-f" checked><label for="i-g-f">Female</label>
-    </div>
-    <div>
-        <label>Documents:</label><br>
-        <input type="checkbox" name="document-submitted" value="passport" id="i-d-p"><label
-            for="i-d-p">Passport</label><br>
-        <input type="checkbox" name="document-submitted" value="dr-lc" id="i-d-d"><label for="i-d-d">Driving
-            License</label><br>
-        <input type="checkbox" name="document-submitted" value="re-pr" id="i-d-r" checked disabled><label
-            for="i-d-r">Resident
-            Proof</label><br>
-        <br>
-    </div>
-    <div>
-        <label>Documents:</label><br>
-        <select name="document-selected">
-            <option value="passport">Passport</option>
-            <option value="dr-lc" selected>Driving License</option>
-            <option value="re-pr">Resident Proof</option>
-        </select>
-        <br>
-    </div>
-    <div>
-        <label>Score:</label><br>
-        <input type="range" name="score-yourself" min="1" max="10" value="2">
-    </div>
+        <div>
+            <label>Gender:</label><br>
+            <input type="radio" name="gender" value="male" id="i-g-m"><label for="i-g-m">Male</label><br>
+            <input type="radio" name="gender" value="female" id="i-g-f" checked><label for="i-g-f">Female</label>
+        </div>
+        <div>
+            <label>Documents:</label><br>
+            <input type="checkbox" name="document-submitted" value="passport" id="i-d-p"><label
+                for="i-d-p">Passport</label><br>
+            <input type="checkbox" name="document-submitted" value="dr-lc" id="i-d-d"><label for="i-d-d">Driving
+                License</label><br>
+            <input type="checkbox" name="document-submitted" value="re-pr" id="i-d-r" checked disabled><label
+                for="i-d-r">Resident
+                Proof</label><br>
+            <br>
+        </div>
+        <div>
+            <label>Documents:</label><br>
+            <select name="document-selected">
+                <option value="passport">Passport</option>
+                <option value="dr-lc" selected>Driving License</option>
+                <option value="re-pr">Resident Proof</option>
+            </select>
+            <br>
+        </div>
+        <div>
+            <label>Score:</label><br>
+            <input type="range" name="score-yourself" min="1" max="10" value="2">
+        </div>
 
-    <textarea name="description" rows="10" cols="50">This is my request to register....</textarea>
-    <br><br>
+        <textarea name="description" rows="10" cols="50">This is my request to register....</textarea>
+        <br><br>
 
 
-    <input type="checkbox" hidden name="document-submitted" value="re-pr" id="i-d-r" checked>
-    <button>Register</button> <!-- default is type="submit" -->
-    <!-- <input type="submit" value="Register"> -->
-</form>
+        <input type="checkbox" hidden name="document-submitted" value="re-pr" id="i-d-r" checked>
+        <button>Register</button> <!-- default is type="submit" -->
+        <!-- <input type="submit" value="Register"> -->
+    </form>
 
-<h4>Naming convention</h4>
+    <h4>Naming convention</h4>
     <dl>
         <dt>camelCase</dt>
         <dd>multiple words are joined by making the first letter capital (except first word)<br>
@@ -120,6 +127,7 @@
     </dl>
 
 </body>
+
 </html>
 
 
